fix: lessen gap in buttons to match local

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 .external-theme-button {
 	display: flex;
 	align-items: center;
-	gap: 10px;
+	gap: 8px;
 	padding: 0px;
 	margin: 0px;
 }
